codeblock/nginx-eklet-nodeaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # highlight-start
      affinity:
        nodeAffinity: # 使用 nodeAffinity 显式指定调度到超级节点
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - eklet
      # highlight-end
      containers:
        - name: nginx
          image: nginx:latest
