codeblock/nginx-instance-type.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # 使用  nodeSelector 显式指定调度到 SA2.MEDIUM8 机型的节点
      # highlight-start
      nodeSelector:
        node.kubernetes.io/instance-type: SA2.MEDIUM8
      # highlight-end
      containers:
        - name: nginx
          image: nginx:latest
