codeblock/nginx-ipv6-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        # highlight-start
        tke.cloud.tencent.com/ipv6-attributes: '{"InternetMaxBandwidthOut": 100}'
        tke.cloud.tencent.com/need-ipv6-addr: "true"
        # tke.cloud.tencent.com/ipv6-attributes: '{"BandwidthPackageId":"bwp-xxx","InternetChargeType":"BANDWIDTH_PACKAGE","InternetMaxBandwidthOut":1}' # 如需带宽包，参考这个配置
        # highlight-end
      labels:
        app: nginx
    spec:
      nodeSelector:
        node.kubernetes.io/instance-type: eklet # 调度到超级节点
      containers:
        - image: nginx:latest
          name: nginx
