codeblock/nginx-retain-eip.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  serviceName: ""
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        eks.tke.cloud.tencent.com/eip-attributes: '{"InternetMaxBandwidthOut":50, "InternetChargeType":"TRAFFIC_POSTPAID_BY_HOUR"}'
        # highlight-next-line
        eks.tke.cloud.tencent.com/eip-claim-delete-policy: "Never" # 声明要保留 EIP（Pod 重建后保持 EIP 不变），仅支持 StatefulSet
      labels:
        app: nginx
    spec:
      nodeSelector:
        node.kubernetes.io/instance-type: eklet
      containers:
        - name: nginx
          image: nginx:latest
          command:
            - sleep
            - infinity
