codeblock/nginx-service-direct-access.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    # 显式声明使用直连
    # highlight-next-line
    service.cloud.tencent.com/direct-access: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
