codeblock/nginx-service-multi-zone.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    # 指定主可用区和备可用区
    # highlight-next-line
    service.kubernetes.io/service.extensiveParameters: '{ "MasterZoneId": "ap-guangzhou-4", "SlaveZoneId": "ap-guangzhou-8" }'
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
