codeblock/nginx-service-reuse.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    # 指定要已有的 CLB ID
    # highlight-next-line
    service.kubernetes.io/tke-existed-lbid: "lb-********"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
