codeblock/nginx-service-subnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    # 指定子网 ID
    # highlight-next-line
    service.kubernetes.io/qcloud-loadbalancer-internal-subnetid: subnet-********
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
