codeblock/nginx-service-vip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    # 指定主可用区和备可用区
    # highlight-next-line
    service.kubernetes.io/service.extensiveParameters: '{ Vip: "1.1.1.1" }'
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
