codeblock/nginx2-service-reuse.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  labels:
    app: nginx2
  annotations:
    # 指定要已有的 CLB ID
    # highlight-next-line
    service.kubernetes.io/tke-existed-lbid: "lb-********"
spec:
  type: LoadBalancer
  ports:
    # highlight-next-line
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx2
