codeblock/nginx-ingress-direct-access.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qcloud
    # highlight-next-line
    ingress.cloud.tencent.com/direct-access: "true"
  name: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
